<resources>
    <string name="app_name">Wada Easy</string>
    <string name="SignUP">Sign Up</string>
    <string name="Firstname">First name</string>
    <string name="Lastname">Last Name</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Login">Login</string>
    <string name="APPname">වැඩ Easy</string>
    <string name="accouthave">Already have an Account Login</string>
    <string name="haventaccountmsg">Do not have an account yet?  Sign Up</string>
    <string name="Switch">Welcome!</string>
    <string name="Thanks">Thanks ! For Joing With Us....</string>
    <string name="AddService">ADD SERVICE</string>
    <string name="Appoiments">APPOIMENTS</string>
    <string name="Request">REQUESTS</string>
    <string name="FeedBack">FEEDBACK</string>

    <string name="AddService1">Add Service</string>
    <string name="AddName">Name :</string>
    <string name="AddType">Select Service Type :</string>
    <string name="WorkingArea1">Area 1 :</string>
    <string name="WorkingArea2">Area 2 :</string>
    <string name="WorkingHours">Working Hours :</string>
    <string name="WorkingAreas">Working Areas</string>
    <string name="To">To</string>
    <string name="Name" />
    <string name="Area1input" />
    <string name="AddNew" />
    <string name="Area2input" />
    <string name="ServiceCharge">Service Charge (Per Hour) :</string>
    <string name="ServiceQulification">Service Qulification :</string>
    <string name="Next">Next</string>
    <string name="WorkingDays">Working Days :</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wensday">Wensday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Satuday">Satuday</string>
    <string name="Sunday">Sunday</string>
    <string name="MoreInfo">More Infomation :</string>
    <string name="btnSubmit">Submit</string>
    <string name="Contact">Contact Numbers </string>
    <string name="Number1">Number 1 :</string>
    <string name="Number2">Number 2 :</string>
    <string name="StartTime">08:00 AM</string>
    <string name="EndTime">05:00 PM</string>
    <string name="manage">Manage</string>
    <string name="previous">Previous</string>
    <string name="test" />
    <string name="NameRead" />
    <string name="Back">></string>
    <string name="btnAppoiment">Appoiment</string>
    <string name="image">Select Profile Picture :</string>
    <string name="propic">Choose</string>
    <string name="txt" />
    <string name="more">More Infomation :</string>
    <string name="morezinfoview" />
    <string name="btnHome"></string>
    <string name="UpdateNew">Edit Service</string>
    <string name="NameUpdate" />
    <string name="btnUpdate1">UPDATE</string>
    <string name="btnUpdate">UPDATE</string>
    <string name="ServiceName">Aluminiam</string>
    <string name="ProviderName">Dinuka Nawanjana</string>
    <string name="Area">Working Areas :</string>
    <string name="Area1Service">Horana</string>
    <string name="Area2Service">Panadura</string>

    <string name="MyService2">My Service</string>
    <string name="NameView">Name :</string>
    <string name="ServiceView">Service Type :</string>
    <string name="AreaView">Working Areas :</string>
    <string name="Nameview" />
    <string name="Servicetypeview" />
    <string name="Areaview1" />
    <string name="Areaview2" />
    <string name="Workingtimeview">Working Time :</string>
    <string name="StimeView" />
    <string name="EtimeView" />
    <string name="to">To</string>
    <string name="Days">Working Days :</string>
    <string name="d1" />
    <string name="NameView2">Name :</string>
    <string name="Qualification">Qualification :</string>
    <string name="Qualificationview" />
    <string name="phone">Phone :</string>
    <string name="phone1view" />
    <string name="Phone">Phone :</string>
    <string name="ph1" />
    <string name="ph2" />
    <string name="charge">Working Charge Per Hour (LKR) :</string>
    <string name="ChargeView" />
    <string name="MyService">My Service</string>


    <string-array name="service">
        <item>Aluminium</item>
        <item>Mosons</item>
        <item>Tile</item>
        <item>Plumbing</item>
        <item>CCTV</item>
        <item>A/C</item>
        <item>Landscaping</item>
        <item>Welding</item>
        <item>Electrical</item>
        <item>Electronic</item>
        <item>Painting</item>
        <item>Carpenters</item>
    </string-array>


    //headings
    <string name="heading1">Add Appointment</string>//heading
    <string name="edit_appointment">Edit Appointment</string>//heading 2
    <string name="delete_appointment">Delete Appointment</string>//heading 3
    <string name="Search">Search Service</string>//heading 4
    <string name="Results">Results</string>//heading5
    <string name="Manage_appoint">My Appointments</string>//heading6

    //form details
    <string name="Cl_Name">Name</string>sir arae
    <string name="Cl_location">Location</string>
    <string name="Cl_phone">Contact</string>
    <string name="ap_time">Time</string>
    <string name="ap_date">Date</string>
    <string name="ap_type">Type</string>
    <string name="prov_no">Provider No</string>
    <string name="cl_Remark">Remark</string>
    <string name="qualification">Qualification</string>
    <string name="status">Status</string>
    <string name="working_day">Working_days</string>
    <string name="Email1">email</string>
    <string name="prov_area">Areas</string>

    //preview,edit,delete

    <string name="Appoin_no">Appointment No</string>
    <string name="Appoin_details">Appointment Details</string>

    //alerts and Buttons
    <string name="add">Confirm</string>//button
    <string name="cancel">cancel</string>//button
    <string name="edit">Edit</string>//button
    <string name="delete">delete</string>//button
    <string name="Search_b">Search</string>//button
    <string name="view_p">View profile</string>//button
    <string name="preview">Preview</string>//button
    <string name="book">Book</string>//button
    <string name="quote">Get Quote</string>//button

    <string name="option_1">Yes</string>//button
    <string name="option_2">No</string>//button
    <string name="option_3">Close</string>//button

    //alert messages
    <string name="update_Alert">Update?</string>
    <string name="Confirm_Alert">Confirm?</string>
    <string name="Alert_msg">Your Appointment has been updated</string>
    <string name="Alert_msg2">Are you sure you want to delete?</string>
    <string name="Alert_msg3">Didnt find what you are looking for?</string>

    <string name="prov_name">provider</string>
    <string name="updatereq">Updated Appointment</string>
    <string name="delete_app">Deleted Appointment</string>
    <string name="dashboard"><![CDATA[<-]]></string>
    <string name="BookinREq">Booking Request</string>
    <string name="confirmAP">Confirm Appoiment</string>
    <string name="Loding">Loding......</string>
    <string name="Sortmsg">Enter short msg for custoer</string>
    <string name="shortmsgforcustomer">Enter short msg for customer</string>
    <string name="Quote">Quote</string>

    //Request(Thiranya)


    //headings
    <string name="request_service">Request Service</string>
    <string name="my_request">My Request</string>
    <string name="update_request">Update Request</string>
    <string name="delete_request">Delete Request</string>

    //form details
    <string name="cl_name">Name</string>
    <string name="cl_email">Email</string>
    <string name="cl_location">Location</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="phonereq">Phone</string>
    <string name="service_type">Service Type</string>
    <string name="request_number">Request Number</string>
    <string name="sp_name">Service Provider Name</string>
    <string name="cl_requestedDetails">Requested Service</string>
    <string name="sp_number">Service Provider Number</string>
    <string name="feedback">Feedback</string>

    //alerts and buttons
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="cancelreq">Cancel</string>
    <string name="previewreq">Preview</string>
    <string name="update">Update</string>
    <string name="editreq">Edit</string>
    <string name="deletereq">Delete</string>
    <string name="close">Close</string>
    <string name="back">Back</string>

    //alert messages
    <string name="delete_alert">Delete</string>
    <string name="edit_alert">Update</string>
    <string name="delete_alert_msg">Your Request has been deleted successfully</string>
    <string name="edit_alert_msg">Your Request has been updated successfully</string>

    //client dashboard
    <string name="search">Search Service</string>
    <string name="appointment">Appointment</string>
    <string name="requestservice">Request Service</string>
    <string name="myrequest">My request</string>
    <string name="feedbackbtn">Feedback</string>
    <string name="invalid_name">Please Enter Valid Name</string>
    <string name="invalid_mobile">Please Enter a Valid Number</string>
    <string name="ratingbtn">Rate Us</string>
    <string name="AddService4">Add Service</string>
    <string name="rowviewbtn">View</string>
    <string name="RowBtn">View</string>
    <string name="AvailableService">Available Services</string>
    <string name="WorkingAreasRow">Working Areas</string>
    <string name="GetQut">GET QUOTE</string>
    <string name="Bookbtn">BOOK</string>
    <string name="cancelappoiment">Cancel Appoiment</string>
    <string name="msgforprovider">If You want any other clarify please Contact Customer</string>
    <string name="customer" />
    <string name="cusfeedback">Customer Feedback</string>
    <string name="ServiceREq">Service Request</string>


</resources>

