<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F1EAAD"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ServiceName"
            android:layout_width="388dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/ServiceName"
            android:textColor="#3F51B5"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ProviderName"
            android:layout_width="388dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/ProviderName"
            android:textColor="#10100D"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Area"
            android:layout_width="388dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/Area"
            android:textColor="#F44336"
            android:textSize="16sp"
            android:textStyle="bold|italic" />


        <TextView
            android:id="@+id/Area1"
            android:layout_width="388dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="13dp"
            android:text="@string/Area1Service"
            android:textColor="#10100D"
            android:textSize="16sp"></TextView>

        <TextView
            android:id="@+id/Area2"
            android:layout_width="388dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="13dp"
            android:text="@string/Area2Service"
            android:textColor="#10100D"
            android:textSize="16sp"></TextView>


    </LinearLayout>
</LinearLayout>