<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceView">

    <TextView
        android:id="@+id/charge"
        android:layout_width="273dp"
        android:layout_height="33dp"
        android:text="@string/charge"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799" />

    <TextView
        android:id="@+id/More"
        android:layout_width="77dp"
        android:layout_height="35dp"
        android:text="@string/Phone"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="113dp"
        android:layout_height="37dp"
        android:text="@string/NameView"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/Qualification"
        android:layout_width="113dp"
        android:layout_height="37dp"
        android:text="@string/Qualification"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

    <TextView
        android:id="@+id/d7"
        android:layout_width="113dp"
        android:layout_height="28dp"
        android:text="@string/d1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597" />

    <TextView
        android:id="@+id/d6"
        android:layout_width="113dp"
        android:layout_height="28dp"
        android:text="@string/d1"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/d5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/d5"
        android:layout_width="113dp"
        android:layout_height="28dp"
        android:text="@string/d1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541" />

    <TextView
        android:id="@+id/d2"
        android:layout_width="113dp"
        android:layout_height="28dp"
        android:text="@string/d1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <TextView
        android:id="@+id/d3"
        android:layout_width="113dp"
        android:layout_height="28dp"
        android:text="@string/d1"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/d2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/EtimeView"
        android:layout_width="90dp"
        android:layout_height="29dp"
        android:text="@string/EtimeView"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="142dp"
        android:layout_height="37dp"
        android:text="@string/Workingtimeview"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="35dp"
        android:layout_height="31dp"
        android:text="@string/to"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/StimeView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.707"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MyService"
        android:textColor="#750788"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Days"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="142dp"
        android:layout_height="37dp"
        android:text="@string/ServiceView"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="142dp"
        android:layout_height="37dp"
        android:text="@string/AreaView"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269" />

    <TextView
        android:id="@+id/Servicetype"
        android:layout_width="221dp"
        android:layout_height="33dp"
        android:layout_marginStart="172dp"
        android:layout_marginLeft="172dp"
        android:text="@string/Servicetypeview"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Areview1"
        android:layout_width="207dp"
        android:layout_height="30dp"
        android:text="@string/Areaview1"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Areaview2"
        android:layout_width="207dp"
        android:layout_height="30dp"
        android:text="@string/Areaview2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309" />

    <TextView
        android:id="@+id/StimeView"
        android:layout_width="87dp"
        android:layout_height="31dp"
        android:text="@string/StimeView"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/EtimeView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/d1"
        android:layout_width="113dp"
        android:layout_height="28dp"
        android:text="@string/d1"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/d2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/d4"
        android:layout_width="113dp"
        android:layout_height="28dp"
        android:text="@string/d1"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/d5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Nameview"
        android:layout_width="242dp"
        android:layout_height="33dp"
        android:text="@string/Nameview"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/qul"
        android:layout_width="229dp"
        android:layout_height="30dp"
        android:text="@string/Qualificationview"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Qualification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.967"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ph1"
        android:layout_width="128dp"
        android:layout_height="28dp"
        android:text="@string/ph1"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/More"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ph2"
        android:layout_width="122dp"
        android:layout_height="27dp"
        android:text="@string/ph2"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ph1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/chargeView"
        android:layout_width="87dp"
        android:layout_height="27dp"
        android:text="@string/ChargeView"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/charge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>